Many Issues Fixed

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Contact Us</title>
+  <title>GDSC SIT | Contact Us</title>
 
   <!-- Favicons -->
-  <link href="../assets/img/dsc_logo.png" rel="icon">
+  <link href="/Images/favicon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link
@@ -56,75 +56,77 @@
   <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex align-items-center justify-content-center" style="height: 50vh !important;">
+  <section id="hero" class="d-flex align-items-center justify-content-center" style="height: 60vh !important;">
 
     <div class="container-fluid" data-aos="fade-up">
       <div class="row justify-content-center ">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>Contact US
           </h1>
-          <h2>We love to hear from us! Drop Us a hi anytime :)</h2>
-          
+          <h2 style="color: white; margin-top: 0 !important;">We would love to hear from you! Drop us a Hi anytime :)
+          </h2>
+
         </div>
         <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
-          <img src="../assets/img/Team/logoabc 1.svg" class="img-fluid animated" alt="" style="height: 100%; width: 100%;">
+          <img src="../assets/img/Team/logoabc 1.svg" class="img-fluid animated" alt=""
+            style="height: 100%; width: 100%;">
         </div>
       </div>
     </div>
   </section>
   <!-- ======= Hero Section End ======= -->
-  
 
-<div class="contact-parent">
+
+  <div class="contact-parent">
     <div class="contact-cards" style="width: 300px;height: 200px;">
-        <a href="https://gdsc.community.dev/siliguri-institute-of-technology-darjeeling/" target="blank">
-            <div class="chapter">
-                <img class="chapter-img" src="../assets/img/chapter.jpg" alt="">
-                <p>Join our Chapter.</p>
-            </div>
-        </a>
+      <a href="https://gdsc.community.dev/siliguri-institute-of-technology-darjeeling/" target="blank">
+        <div class="chapter">
+          <img class="chapter-img" src="../assets/img/chapter.jpg" alt="">
+          <p>Join our Chapter</p>
+        </div>
+      </a>
     </div>
     <div class="contact-cards" style="width: 300px;height: 200px;">
-        <a href="mailto: roystark24@gmail.com">
-            <div class="contact-mail">
-                <img class="contact-mail-img" src="../assets/img/contact-mail.jpg" alt="">
-                <p>Send us an email.</p>
-            </div>
-        </a>
+      <a href="mailto: roystark24@gmail.com">
+        <div class="contact-mail">
+          <img class="contact-mail-img" src="../assets/img/contact-mail.jpg" alt="">
+          <p>Send us an email</p>
+        </div>
+      </a>
     </div>
-</div>
+  </div>
 
-<div style="display: flex; align-items: center; justify-content: center; padding: 20px 20px;"><h2 class="">Reach out to us at</h2></div>
+  <div style="display: flex; align-items: center; justify-content: center; padding: 20px 20px;">
+    <h2 style="font-size: 18pt; font-weight: 400; margin-bottom: 0 !important;" class="">Reach out to us at</h2>
+  </div>
 
-<div class="container-icons justify-content-centre">
-    <div class="row" style="justify-content: center;width: 100%;">
-        <div class=" contact-cards" style="width: 90px;">
-            <i class="bi bi-facebook" style="color: #4267B2;"></i>
-        </div>
+  <div class="container-icons justify-content-centre">
+    <div class="row" style="justify-content: center;width: 100%; margin-bottom: 30px;">
+      <div class=" contact-cards" style="width: 90px;">
+        <a href=""><i class="bi bi-facebook" style="color: #4267B2;"></i></a>
+      </div>
 
-        <div class=" contact-cards" style="width: 90px;">
-            <i class="bi bi-instagram" style="color: #E1306C;"></i>
-        </div>
+      <div class=" contact-cards" style="width: 90px;">
+        <a href=""><i class="bi bi-instagram" style="color: #E1306C;"></i></a>
+      </div>
 
-        <div class=" contact-cards" style="width: 90px;">
-            <i class="bi bi-github" style="color: black;"></i>
-        </div>
+      <div class=" contact-cards" style="width: 90px;">
+        <a href=""><i class="bi bi-github" style="color: black;"></i></a>
+      </div>
 
-        <div class=" contact-cards" style="width: 90px;">
-            <i class="bi bi-linkedin" style="color: #2867B2;"></i>
-        </div>
+      <div class=" contact-cards" style="width: 90px;">
+        <a href=""><i class="bi bi-linkedin" style="color: #2867B2;"></i></a>
+      </div>
 
-        <div class=" contact-cards" style="width: 90px;">
-            <i class="bi bi-youtube" style="color: #f52525;"></i>
-        </div>
+      <div class=" contact-cards" style="width: 90px;">
+        <a href=""><i class="bi bi-youtube" style="color: #f52525;"></i></a>
+      </div>
 
-        <div class=" contact-cards" style="width: 90px;">
-            <i class="bi bi-twitter" style="color: #4285F4;"></i>
-        </div>
+      <div class=" contact-cards" style="width: 90px;">
+        <a href=""><i class="bi bi-twitter" style="color: #4285F4;"></i></a>
+      </div>
     </div>
-</div>
-
-
+  </div>
 
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/purecounter/purecounter.js"></script>
