--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>GDSC</title>
+  <title>GDSC SIT</title>
 
   <!-- Favicons -->
-  <link href="assets/img/dsc_logo.png" rel="icon">
+  <link href="Images/favicon.png" rel="icon" style="height: 10px; width: 10px;">
 
   <!-- Google Fonts -->
   <link
@@ -61,9 +61,13 @@
     <div class="container-fluid" data-aos="fade-up">
       <div class="row justify-content-center ">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>WE ARE <br> GDSC SIT
+          <h1>
+            <p class="we-are">We are</p>
+            <span style="color: #4285F4;">G</span><span style="color: #EA4335;">D</span><span
+              style="color: #fbbc04;">S</span><span style="color: #34a853">C</span>
+            SIT
           </h1>
-          <h2>A gang of tech freaks learning and sharing knowledge in and out of the campus.</h2>
+          <h2 style="color: white;">A gang of tech freaks learning and sharing knowledge in and out of the campus</h2>
           <div><a href="https://gdsc.community.dev/siliguri-institute-of-technology-darjeeling/" target="blank"
               class="btn-get-started scrollto">Join Our Chapter</a></div>
         </div>
@@ -82,12 +86,16 @@
     <div class="container-fluid">
       <div class="row justify-content-center align-items-center">
         <div class="col-md-6 ">
-          <h2>🤔 Who are we?</h2>
-          <h3>Google Developer Student Clubs are community groups for college and university students interested in Google developer technologies. 
-            </h3>
+          <h2 style="font-size: 20pt;">Who are we? 🤔</h2>
+          <h3 style="font-size: 20px; color: #666; margin-bottom: 30px !important;">Google Developer Student Clubs are
+            community groups for college and
+            university students interested in
+            Google developer technologies.
+          </h3>
         </div>
         <div class="col-md-4">
-          <img src="assets/img/info-1-img.gif" class="img-fluid mx-auto" style="border: 2px solid #4285F4; border-radius: 10px;">
+          <img src="assets/img/info-1-img.gif" class="img-fluid mx-auto"
+            style="border: 4px solid #4285F4; border-radius: 10px;">
         </div>
       </div>
     </div>
@@ -97,12 +105,16 @@
     <div class="container-fluid">
       <div class="row justify-content-center align-items-center">
         <div class="col-md-4">
-          <img src="assets/img/info-2-img.jpg" class="img-fluid mx-auto" style="border: 2px solid #EA4335; border-radius: 10px;">
+          <img src="assets/img/info-2-img.jpg" class="img-fluid mx-auto"
+            style="border: 4px solid #EA4335; border-radius: 10px;">
         </div>
         <div class="col-md-6 ">
-          <h2>🤚 Why join us?</h2>
-          <h3>Students from all undergraduate or graduate programs with an interest in growing as a developer are welcome. By joining a GDSC, students grow their knowledge in a peer-to-peer learning environment and build solutions for local businesses and their community.
-            </h3>
+          <h2 style="font-size: 20pt; margin-top: 30px !important;">Why join us? 🤚</h2>
+          <h3 style="color: #666; font-size: 20px;">Students from all undergraduate or graduate programs with an
+            interest in growing as a developer are
+            welcome. By joining a GDSC, students grow their knowledge in a peer-to-peer learning environment and build
+            solutions for local businesses and their community.
+          </h3>
         </div>
       </div>
     </div>
@@ -115,24 +127,28 @@
 
       <div class="row counters">
 
-        <div class="col-lg-3 col-6 text-center">
-          <span data-purecounter-start="0" data-purecounter-end="522" data-purecounter-duration="1" class="purecounter"></span>
+        <div class="col-lg-3 col-6 text-center" style="font-size: 20pt;">
+          <span data-purecounter-start="0" data-purecounter-end="522" data-purecounter-duration="1"
+            class="purecounter"></span>
           <p>Members</p>
         </div>
 
         <div class="col-lg-3 col-6 text-center">
-          <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
-          <p>Projects</p>
+          <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="1"
+            class="purecounter"></span>
+          <p>Organizers</p>
         </div>
 
         <div class="col-lg-3 col-6 text-center">
-          <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="1" class="purecounter"></span>
-          <p>Origanizers</p>
-        </div>
-
-        <div class="col-lg-3 col-6 text-center">
-          <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+          <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1"
+            class="purecounter"></span>
           <p>Workshops</p>
+        </div>
+
+        <div class="col-lg-3 col-6 text-center">
+          <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1"
+            class="purecounter"></span>
+          <p>Projects</p>
         </div>
 
       </div>
@@ -143,7 +159,17 @@
 
   <section id="info-cards" class="d-flex align-items-center">
     <div class="container-fluid">
-      <div class="row justify-content-center" >
+      <div class="row justify-content-center">
+        <!-- 
+        <div class="home-cards">
+          <div class="home-cards-img"></div>
+          <h2 style="margin-top: 5px;">Events</h2>
+          <p>Join our sessions, workshops, study jams and grab an awesome oppurtunity to learn.</p>
+        </div>
+
+        <div class="home-cards"></div>
+
+        <div class="home-cards"></div> -->
 
         <div class="col-md-3 cards" style="margin: 20px 20px !important">
           <div style="height: 250px;"><img src="assets/img/events-card.jpeg" class="card-img-top" alt=""></div>
@@ -158,7 +184,8 @@
           <div style="height: 250px;"><img src="assets/img/collab-card.jpg" class="card-img-top" alt=""></div>
           <div class="card-body">
             <h5 class="card-title">Collaborations 🤝</h5>
-            <p class="card-text">Interested to be a speaker or a community collaborator. Drop us in Email with your proposition.</p>
+            <p class="card-text">Interested to be a speaker or a community collaborator. Drop us in Email with your
+              proposition.</p>
             <a href="Pages/contact.html" class="btn btn-primary">Contact Us</a>
           </div>
         </div>
@@ -180,44 +207,58 @@
     <div class="container" data-aos="fade-up">
 
       <div class="section-title">
-        <h2>Frequently Asked Questions</h2>
-        
+        <h2 style="font-weight: 500;">Frequently Asked Questions</h2>
+
       </div>
 
       <div class="faq-list">
         <ul>
           <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100">
-            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Who can become a member? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <i class="bx bx-help-circle icon-help" style="color: #ea4335 !important;"></i> <a data-bs-toggle="collapse"
+              class="collapse" data-bs-target="#faq-list-1" style="color: #333;">Who can become a member? <i
+                class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
             <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
               <p>
-                The clubs is open to any student, ranging from novice developers who are just starting, to advanced developers who want to further their skills.
+                The clubs is open to any student, ranging from novice developers who are just starting, to advanced
+                developers who want to further their skills.
               </p>
             </div>
           </li>
 
+
+
           <li data-aos="fade-up" data-aos-delay="200">
-            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">How frequently do events and workshops occur?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <i class="bx bx-help-circle icon-help" style="color: #4285F4;"></i> <a data-bs-toggle="collapse"
+              data-bs-target="#faq-list-2" class="collapsed" style="color: #333;">How frequently do events and workshops
+              occur?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
             <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
               <p>
-                We regularly hold workshops, sessions, and developer programs & we would recommend you to join our community by becoming a member to get updates.
+                We regularly hold workshops, sessions, and developer programs & we would recommend you to join our
+                community by becoming a member to get updates.
               </p>
             </div>
           </li>
 
           <li data-aos="fade-up" data-aos-delay="300">
-            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">What should I carry when attending a workshop? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <i class="bx bx-help-circle icon-help" style="color: #34a853;"></i> <a data-bs-toggle="collapse"
+              data-bs-target="#faq-list-3" class="collapsed" style="color: #333;">What should I carry when attending a
+              workshop? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
             <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                We recommend you to have a notebook, pen and a laptop with you because more often we make our hands dirty with code. Most importantly, carry along a healthy dose of curiosity and enthusiasm.
+                We recommend you to have a notebook, pen and a laptop with you because more often we make our hands
+                dirty with code. Most importantly, carry along a healthy dose of curiosity and enthusiasm.
               </p>
             </div>
           </li>
 
           <li data-aos="fade-up" data-aos-delay="400">
-            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Who should I reach out to if I have any questions? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <i class="bx bx-help-circle icon-help" style="color: #fbbc04;"></i> <a data-bs-toggle="collapse"
+              data-bs-target="#faq-list-4" class="collapsed" style="color: #333;">Who should I reach out to if I have
+              any questions? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
             <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
               <p>
-                If you have any questions or comments, please don't hesitate to contact us. We would be happy to stay engaged even after the events.
+                If you have any questions or comments, please don't hesitate to contact us. We would be happy to stay
+                engaged even after the events.
               </p>
             </div>
           </li>
@@ -226,7 +267,7 @@
       </div>
 
     </div>
-    
+
   </section><!-- End Frequently Asked Questions Section -->
 
 
