--- a/Pages/about.html
+++ b/Pages/about.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About Us</title>
+  <title>GDSC SIT | About Us</title>
 
   <!-- Favicons -->
-  <link href="../assets/img/dsc_logo.png" rel="icon">
+  <link href="/Images/favicon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link
@@ -56,14 +56,14 @@
   <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex align-items-center justify-content-center" style="height: 50vh !important;">
+  <section id="hero" class="d-flex align-items-center justify-content-center" style="height: 60vh !important;">
 
     <div class="container-fluid" data-aos="fade-up">
       <div class="row justify-content-center ">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>About GDSC
           </h1>
-          <h2>Get to know what we are and what we do.</h2>
+          <h2 style="color: white; margin-top: 0 !important;">Get to know what we are and what we do</h2>
           
         </div>
         <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
@@ -77,7 +77,7 @@
     <div class="container-fluid">
       <div class="row justify-content-center align-items-center">
         <div class="col-md-5">
-          <p class="about-para">
+          <p class="about-para" style="margin-bottom: 40px;">
             <b>Google Developer Student Clubs (GDSC)</b> are community groups
             for college and university students interested in Google developer
             technologies.<br /><br />
@@ -112,7 +112,7 @@
           />
         </div>
         <div class="col-md-5">
-          <h2 style="color: #4285f4">Connect 🔗</h2>
+          <h2 style="color: #4285f4; margin-top: 40px;">Connect 🔗</h2>
           <p>
             Meet students interested in developer technologies at your
             university. All are welcome, including those with diverse
@@ -130,7 +130,7 @@
       <div class="row justify-content-center align-items-center">
         <div class="col-md-5">
           <h2 style="color: #ea4335">Learn 📖</h2>
-          <p>
+          <p style="margin-bottom: 40px;">
             Learn about a range of technical topics and gain new skills
             through hands-on workshops, events, talks, and project-building
             activities - both online and in-person.
@@ -158,7 +158,7 @@
           />
         </div>
         <div class="col-md-5">
-          <h2 style="color: #4285f4">Grow 🍀</h2>
+          <h2 style="color: #4285f4; margin-top: 40px;">Grow 🍀</h2>
           <p>
             Apply new learnings to build great solutions for local problems.
             Advance your skills, career, and network. Give back to your
