--- a/Pages/events.html
+++ b/Pages/events.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Events</title>
+  <title>GDSC SIT | Events</title>
 
   <!-- Favicons -->
-  <link href="../assets/img/dsc_logo.png" rel="icon">
+  <link href="/Images/favicon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link
@@ -56,14 +56,14 @@
   <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex align-items-center justify-content-center" style="height: 50vh !important;">
+  <section id="hero" class="d-flex align-items-center justify-content-center" style="height: 60vh !important;">
 
     <div class="container-fluid" data-aos="fade-up">
       <div class="row justify-content-center ">
         <div class="col-xl-5 col-lg-6 pt-3 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>Events
           </h1>
-          <h2>Check out our cool events 😼</h2>
+          <h2 style="color: white; margin-top: 0 !important;">Check out our cool events</h2>
           
         </div>
         <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
@@ -73,7 +73,7 @@
     </div>
   </section>
   <!-- ======= Hero Section End ======= -->
-
+<div style="height: 50px;"></div>
 
 <div class="timeline" >
     <div class="container-ev left-ev">
