--- a/Pages/team.html
+++ b/Pages/team.html
@@ -83,9 +83,9 @@
             <p class="name">Srishti Majumder</p>
             <p class="role">Lead | 2020 - 2021</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/srishti-majumder-6560bb200/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
-                <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
+                <a href="https://github.com/Srishtihere"><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
             </div>
         </div>
@@ -96,9 +96,9 @@
             <p class="name">Rajarshi Roy</p>
             <p class="role">AI/ML Executive</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/rajarshi-roy-ceo/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
-                <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
+                <a href="https://github.com/roy-rajarshi"><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
             </div>
         </div>
@@ -109,7 +109,7 @@
             <p class="name">Shreya Roy</p>
             <p class="role">Cloud Executive</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/shreya-roy-3147881b7/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
@@ -122,9 +122,9 @@
             <p class="name">Debajyoti Sarkar</p>
             <p class="role">Cyber Security Executive</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/debajyoti-sarkar-oos/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
-                <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
+                <a href="https://github.com/debajyotisarkarhome"><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
             </div>
         </div>
@@ -135,9 +135,9 @@
             <p class="name">Soumwadeep Guha</p>
             <p class="role">Web Executive</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/soumwadeep-guha-5b60031bb/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
-                <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
+                <a href="https://github.com/soumwadeep"><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
             </div>
         </div>
@@ -148,9 +148,9 @@
             <p class="name">Sabarna Biswas</p>
             <p class="role">Project Executive</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/sabarna-biswas-a9a718194/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
-                <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
+                <a href="https://github.com/Sabarna07"><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
             </div>
         </div>
@@ -161,7 +161,7 @@
             <p class="name">Gourab Deb</p>
             <p class="role">Project Co-ordinator</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/gourab-deb-b77843142/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
@@ -174,7 +174,8 @@
             <p class="name">Subhranil Sarkar</p>
             <p class="role">UI/UX Executive</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/subhranil-sarkar/
+"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
@@ -187,7 +188,7 @@
             <p class="name">Swarup Das</p>
             <p class="role">Design Executive</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/swarup-das-8bb857200/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
@@ -200,7 +201,7 @@
             <p class="name">Parna Das</p>
             <p class="role">Social Media Executive</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/parna-das-47b886202/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
@@ -213,7 +214,7 @@
             <p class="name">Rajasree Baruri</p>
             <p class="role">Content Executive</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/rajasree-baruri-b07a461ba/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
@@ -226,7 +227,7 @@
             <p class="name">Trinankur Atarthi</p>
             <p class="role">Android Dev Executive</p>
             <div class="socials-profile">
-                <a href=""><img class="socials-style" src="../Icons/linkedin.svg" alt=""
+                <a href="https://www.linkedin.com/in/trinankur-atarthi-862541200/"><img class="socials-style" src="../Icons/linkedin.svg" alt=""
                         style="margin-left: 0 !important;"></a>
                 <a href=""><img class="socials-style" src="../Icons/github.svg" alt=""></a>
                 <a href=""><img class="socials-style" src="../Icons/twitter.svg" alt=""></a>
