--- a/Pages/events.html
+++ b/Pages/events.html
@@ -34,7 +34,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
       <h1 class="logo"><a style="font-family: 'Poppins'; font-size: 16pt; letter-spacing: 0px; font-weight: 500;"
-          href="index.html"><img src="../assets/img/dsc_logo.png" alt="" class="img-fluid" style="height: 20px;"> GDSC
+          href="../index.html"><img src="../assets/img/dsc_logo.png" alt="" class="img-fluid" style="height: 20px;"> GDSC
           SIT</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="../assets/img/dsc_logo.png" alt="" class="img-fluid"></a> -->
