Added links in contact

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -87,7 +87,7 @@
       </a>
     </div>
     <div class="contact-cards" style="width: 300px;height: 200px;">
-      <a href="mailto: roystark24@gmail.com">
+      <a href="mailto: gdscsit2021@gmail.com">
         <div class="contact-mail">
           <img class="contact-mail-img" src="../assets/img/contact-mail.jpg" alt="">
           <p>Send us an email</p>
@@ -103,27 +103,27 @@
   <div class="container-icons justify-content-centre">
     <div class="row" style="justify-content: center;width: 100%; margin-bottom: 30px;">
       <div class=" contact-cards" style="width: 90px;">
-        <a href=""><i class="bi bi-facebook" style="color: #4267B2;"></i></a>
+        <a href="https://www.facebook.com/gdscsitsiliguri/?ref=page_internal"><i class="bi bi-facebook" style="color: #4267B2;"></i></a>
       </div>
 
       <div class=" contact-cards" style="width: 90px;">
-        <a href=""><i class="bi bi-instagram" style="color: #E1306C;"></i></a>
+        <a href="https://www.instagram.com/gdsc_sit2021/"><i class="bi bi-instagram" style="color: #E1306C;"></i></a>
       </div>
 
       <div class=" contact-cards" style="width: 90px;">
-        <a href=""><i class="bi bi-github" style="color: black;"></i></a>
+        <a href="https://github.com/gdscsit2021"><i class="bi bi-github" style="color: black;"></i></a>
       </div>
 
       <div class=" contact-cards" style="width: 90px;">
-        <a href=""><i class="bi bi-linkedin" style="color: #2867B2;"></i></a>
+        <a href="https://www.linkedin.com/company/gdsc-sit2020"><i class="bi bi-linkedin" style="color: #2867B2;"></i></a>
       </div>
 
       <div class=" contact-cards" style="width: 90px;">
-        <a href=""><i class="bi bi-youtube" style="color: #f52525;"></i></a>
+        <a href="https://www.youtube.com/channel/UCL4RSWr1nLoWuA_5uZ10k0g"><i class="bi bi-youtube" style="color: #f52525;"></i></a>
       </div>
 
       <div class=" contact-cards" style="width: 90px;">
-        <a href=""><i class="bi bi-twitter" style="color: #4285F4;"></i></a>
+        <a href="https://twitter.com/gdsc_sit"><i class="bi bi-twitter" style="color: #4285F4;"></i></a>
       </div>
     </div>
   </div>
