Added All The Events

--- a/Pages/events.html
+++ b/Pages/events.html
@@ -77,60 +77,152 @@
 
 <div class="timeline" >
     <div class="container-ev left-ev">
-        <a target="blank" href="https://www.youtube.com/watch?v=thtBpwSQrFw">
+        <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-android-study-jam-session-3/">
             <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-                <h2>Android Study Jams</h2>
+                <h2>Android Study Jam - Session 3</h2>
                 <br>
-                <p>7th Aug, 2021</p>
-                <p>Speaker: Trinankur Atarthi</p>
-                <br>
-                <p>Where he taught us how to get started with Android Studio and build awesome projects in Flutter.
-                </p>
+                <p>Dec 29, 2021</p><br>
+                <p>Speaker:Trinankur Atarthi</p><br>
+                <p>Where He Continued Explaining Kotlin For Android App Development</p>
             </div>
         </a>
     </div>
 
     <div class="container-ev right-ev">
-        <a target="blank" href="https://www.youtube.com/watch?v=thtBpwSQrFw">
+        <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-android-study-jams-session-2/">
             <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-                <h2>Android Study Jams</h2>
-                <br>
-                <p>7th Aug, 2021</p>
-                <p>Speaker: Trinankur Atarthi</p>
-                <br>
-                <p>Where he taught us how to get started with Android Studio and build awesome projects in Flutter.
-                </p>
+              <h2>Android Study Jam - Session 2</h2>
+              <br>
+              <p>Dec 29, 2021</p><br>
+              <p>Speaker:Pankaj Rai</p><br>
+              <p>Where He Continued Explaining Kotlin For Android App Development</p>
             </div>
         </a>
     </div>
 
     <div class="container-ev left-ev">
-        <a target="blank" href="https://www.youtube.com/watch?v=thtBpwSQrFw">
+        <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-women-in-tech-the-beginning/">
             <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
-                <h2>Android Study Jams</h2>
+                <h2>Wo(Men) In Tech: The beginning</h2>
                 <br>
-                <p>7th Aug, 2021</p>
-                <p>Speaker: Trinankur Atarthi</p>
-                <br>
-                <p>Where he taught us how to get started with Android Studio and build awesome projects in Flutter.
+                <p>Dec 9 - 10, 2021</p><br>
+                <p>This Program is Initiated and Organised by 17 GDSCs across the different States of India. </p>
+                <p>The program Wo(Men) In Tech(WIT) focuses on the concept of helping women who are either doing Engineering or are pursuing a career in the Technical Field.
                 </p>
             </div>
         </a>
     </div>
 
     <div class="container-ev right-ev">
-        <a target="blank" href="https://www.youtube.com/watch?v=thtBpwSQrFw">
+        <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-all-about-android-study-jam/">
             <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
                 <h2>Android Study Jams</h2>
                 <br>
-                <p>7th Aug, 2021</p>
-                <p>Speaker: Trinankur Atarthi</p>
-                <br>
-                <p>Where he taught us how to get started with Android Studio and build awesome projects in Flutter.
+                <p>Dec 1, 2021</p><br>
+                <p>Speaker: Trinankur Atarthi</p><br>
+                <p>Where he taught us how to get started with Android Studio and build awesome projects.
                 </p>
             </div>
         </a>
     </div>
+    <div class="container-ev left-ev">
+      <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-lets-kickstart-the-gdsc-journey/">
+          <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
+              <h2>Let's KickStart the GDSC Journey</h2>
+              <br>
+              <p>Nov 27, 2021</p><br>
+              <p>Speakers:Shreya Roy,Gourab Deb & Srishti Majumder</p><br>
+              <p>Where They Explained About Our CLub.</p>
+          </div>
+      </a>
+  </div>
+
+  <div class="container-ev right-ev">
+      <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-hands-on-workshop-on-game-development/">
+          <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
+            <h2>Hands-on Workshop on GAME DEVELOPMENT</h2>
+            <br>
+            <p>Oct 28 - 29, 2021</p><br>
+            <p>Where We Got To Know About:<br>
+              Know the programming fundamentals,Implementation of Logics,
+              Learn new techniques and algorithms to manage the time limitations while coding,
+              Become a pro at debugging codes,
+              Prospects of higher education & 
+              Unlock new career opportunities.</p>
+          </div>
+      </a>
+  </div>
+
+  <div class="container-ev left-ev">
+      <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-reality-check-with-arvr/">
+          <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
+              <h2>Reality Check with AR/VR</h2>
+              <br>
+              <p>Oct 23, 2021</p><br>
+              <p>Speaker:Samarth Singh</p><br>
+              <p>The session was about the AR/VR topic. The speaker shared the basics of the topic and give us an insight into the Hands-on-lab. Also, share about the future prospect of this domain.</p>
+          </div>
+      </a>
+  </div>
+
+  <div class="container-ev right-ev">
+      <a target="blank" href="https://youtu.be/AEU_VVKYXzA">
+          <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
+              <h2>Hacktoberfest and Github</h2>
+              <br>
+              <p>Sep 25, 2021</p><br>
+              <p>Where Our Speakers Explained About Hacktoberfest And Github With Live Demo.
+              </p>
+          </div>
+      </a>
+  </div>
+  <div class="container-ev left-ev">
+    <a target="blank" href="https://gdsc.community.dev/events/details/developer-student-clubs-siliguri-institute-of-technology-darjeeling-presents-reality-check-with-arvr/">
+        <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
+            <h2>Reality Check with AR/VR</h2>
+            <br>
+            <p>Oct 23, 2021</p><br>
+            <p>Speaker:Samarth Singh</p><br>
+            <p>The session was about the AR/VR topic. The speaker shared the basics of the topic and give us an insight into the Hands-on-lab. Also, share about the future prospect of this domain.</p>
+        </div>
+    </a>
+</div>
+
+<div class="container-ev right-ev">
+    <a target="blank" href="https://youtu.be/AEU_VVKYXzA">
+        <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
+            <h2>Hacktoberfest and Github</h2>
+            <br>
+            <p>Sep 25, 2021</p><br>
+            <p>Where Our Speakers Explained About Hacktoberfest And Github With Live Demo.
+            </p>
+        </div>
+    </a>
+</div>
+<div class="container-ev left-ev">
+  <a target="blank" href="https://youtu.be/0CQ3ybwG2q8">
+      <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
+          <h2>Info Session about 30 days of Google Cloud</h2>
+          <br>
+          <p>Sep 19, 2021</p><br>
+          <p>Speakers:Shreya Roy & Srishti Majumder</p><br>
+          <p>Where They Explained Us The Full Procedure Of 30 Days Of Google Cloud</p>
+      </div>
+  </a>
+</div>
+
+<div class="container-ev right-ev">
+  <a target="blank" href="https://youtu.be/HxyxX-emMfk">
+      <div class="content-ev" style="background-image: url('../assets/img/events-background.svg');">
+          <h2>A Two Days Workshop on Getting Started With Open Source</h2>
+          <br>
+          <p>Sep 4 - 5</p><br>
+          <p>Speakers:Aniwesh Tiwari & Vikash Kumar</p><br>
+          <p>Where Our Speakers Explained About What Is Open Source, Its Benefits, Different Open-Source Events & Git Commands, About GitHub & How To Create Your First PR.
+          </p>
+      </div>
+  </a>
+</div>
 </div>
 
 
